syntax = "proto3";

package connections;

service ConnectionsService {
  rpc GetConnections(GetConnectionsRequest) returns (GetConnectionsResponse);

  rpc GetImage(GetImageRequest) returns (GetImageResponse);
  
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
  
  rpc GetWorking(GetWorkingRequest) returns (GetWorkingResponse);
  
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message Connection {
  int32 id = 1;
  string label = 2;
  string type = 3;
  string href = 4;
  string value = 5;
}

message Image {
  int32 id = 1;
  string filename = 2;
  string content_type = 3;
  string url = 4;
}

message Status {
  int32 id = 1;
  string status = 2;
}

message Working {
  int32 id = 1;
  string working_on = 2;
  int32 percentage = 3;
}

message GetConnectionsRequest {}

message GetConnectionsResponse {
  repeated Connection connections = 1;
}

message GetImageRequest {}

message GetImageResponse {
  Image image = 1;
}

message GetStatusRequest {}

message GetStatusResponse {
  Status status = 1;
}

message GetWorkingRequest {}

message GetWorkingResponse {
  Working working = 1;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  string timestamp = 2;
  bool database = 3;
  bool redpanda = 4;
  bool modules_service = 5;
}
